1.2.2b4:
    Core:
    * FIX: Fix output of cmk -D: datasource programs were missing

    Checks & Agents:
    * FIX: smart - not trying to parse unhandled lines to prevent errors
    * FIX: WATO configuration of filesystem trends: it's hours, not days!
    * FIX: winperf_processor - fixed wrong calculations of usage
    * FIX: mysql: fixed crash on computing IO information
    * FIX: diskstat: fix local variable 'ios_per_sec' referenced before assignment
    * Linux agent: limit netstat to 10 seconds
    * ps: Allow %1, %2, .. instead of %s in process_inventory. That allows
      reordering of matched groups
    * FIX: multipath: ignore warning messages in agent due to invalid multipath.conf

    Multisite:
    * FIX: Fixed problem with error during localization scanning
    * FIX: Fixed wrong localization right after a user changed its language
    * FIX: Improved handling of error messages in bulk inventory
    * FIX: fixed focus bug in transform valuespec class

    BI:
    * FIX: fixed invalid links to hosts and services in BI tree view
    * FIX: fix exception in top/down and bottom/up views
    * FIX: fix styling of top/down and bottom/up views (borders, padding)
    * Make titles of non-leaf tree nodes klickable

    WATO:
    * FIX: flexible notification valuespec is now localizable
    * FIX: Alias values of host/service/contact groups need to be set and unique
           within the group

1.2.2b3:
    Checks & Agents:
    * FIX: Fixed date parsing code ignoring the seconds value in several checks
           (ad_replication, cups_queues, heartbeat_crm, mssql_backup, smbios_sel)
    * FIX: Fixed pnp template for apc_symmetra check when using multiple rrds

    Multisite:
    * FIX: Removed uuid module dependency to be compatible to python < 2.5
    * FIX: remove Javascript debug popup from multi-string input fields
    * FIX: list of strings (e.g. host list in rule editor) didn't work anymore

1.2.2b2:
    Checks & Agents: